<resources>
    <string name="app_name">MobileProject</string>
    <string name="title_activity_menu_lateral">MenuLateralActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar sesión</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="welcome">¡Comenzar!</string>
    <string name="last_name">Last Name</string>
    <string name="code">Register</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="gallery">Galería del CETI COLOMOS</string>
    <string name="galleryDesc">¡Dale click a una imagen para obtener una descripción!</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="data">Datos</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_contacts">Contacts</string>
    <string name="menu_location">Location</string>
    <string name="menu_calendar">Calendar</string>
    <!--  MENU DE SUBJECTS  -->
    <string name="menu_subjects">Subjects</string>
    <string name="titleSubjects">Subjects</string>
    <string name="nameSubject">Ingrese el nombre de la materia</string>
    <string name="nameTeacSubject">Ingrese el nombre del profesor</string>
    <string name="btnAddSubject">Añadir Materia</string>
    <string name="btnRefreshSubject">Refrescar</string>
    <!--  MENU DE SUBJECTS  -->

    <!--  FRAGMENT DE CONTACTS  -->
    <string name="titleContacts">Contacts</string>
    <!--  FRAGMENT DE CONTACTS  -->

    <!--  FRAGMENT DE CALENDAR  -->
    <string name="titleCalendar">Calendario 2023</string>
    <!--  FRAGMENT DE CALENDAR  -->

    <!--RUTAS-->
    <string name="title_activity_route">RouteActivity</string>
    <string name="btn2Points">RUTA ENTRE DOS PUNTOS</string>
    <string name="txtOrigin">Ingresa el punto de partida</string>
    <string name="txtDestination">Ingresa el destino</string>
    <string name="btnSearch">SEARCH</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>