<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/img_3"
            android:iconTint="#000000"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@mipmap/img_1"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/fragment_subjects"
            android:icon="@mipmap/img"
            android:title="@string/menu_subjects" />
        <item
            android:id="@+id/fragment_contacts"
            android:icon="@mipmap/img_2"
            android:title="@string/menu_contacts" />
        <item
            android:id="@+id/fragment_location"
            android:icon="@mipmap/img_4"
            android:title="@string/menu_location" />
        <item
            android:id="@+id/notification"
            android:icon="@drawable/baseline_add_alarm_24"
            android:title="Alarm" />
    </group>
</menu>